# Lie-Algebra

./: .gitignore  CMakeLists.txt  Makefile  output.md  readme.md
docs/: example1.1.md  example1.md  output.md
include/Lie-Alg/: DifferentialForm.h  PairUtils.h
res/: input.txt
src/: DifferentialForm.cpp  main.cpp
